# tinyspv

./: .gitmodules  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  frag.spv  gallery.frag.spv  x.frag
include/tinyspv/: deserializer.hpp  expr.hpp  opcode2str.hpp  operand-structs.hpp  spv-instr.hpp  spv-reader.hpp  spv-writer.hpp  stmt.hpp  ty-reg.hpp  type.hpp  value.hpp
include/tinyspv/spirv/unified1/: SPIRV.hpp  SPIRV.instrs.hpp  SPIRV.serde.hpp  enum2str.hpp  opcls.hpp  opcode2str.hpp  operand-struct-readers.hpp  operand-structs.hpp
include/tinyspv/spirv/unified1/instrs/: SPIRV.annotation.hpp  SPIRV.arithmetic.hpp  SPIRV.atomic.hpp  SPIRV.barrier.hpp  SPIRV.bit.hpp  SPIRV.composite.hpp  SPIRV.constant-creation.hpp  SPIRV.control-flow.hpp  SPIRV.conversion.hpp  SPIRV.debug.hpp  SPIRV.derivative.hpp  SPIRV.device-side-enqueue.hpp  SPIRV.extension.hpp  SPIRV.function.hpp  SPIRV.group-and-subgroup.hpp  SPIRV.image.hpp  SPIRV.memory.hpp  SPIRV.miscellaneous.hpp  SPIRV.mode-setting.hpp  SPIRV.non-uniform.hpp  SPIRV.pipe.hpp  SPIRV.primitive.hpp  SPIRV.relational-and-logical.hpp  SPIRV.reserved.hpp  SPIRV.type-declaration.hpp
scripts/: fetch-specs.py  gen-enum2str.py  gen-opcls.py  gen-opcode2str.py  gen-operand-struct-readers.py  gen-operand-struct-serdes.py  gen-operand-structs.py  gen-spec-json.py  gen-spirv-hpp.py
specs/unified1/: SPIRV.json
src/: main.cpp  ty-reg.cpp
src/tinyspv/: deserializer.cpp  expr.cpp  opcode2str.cpp  stmt.cpp  type.cpp  value.cpp
src/tinyspv/spirv/unified1/: SPIRV.serde.cpp  enum2str.cpp  opcls.cpp  opcode2str.cpp
(+25 files in other folders)
